--- a/src/middlewared/middlewared/etc_files/local/nslcd.conf
+++ b/src/middlewared/middlewared/etc_files/local/nslcd.conf
@@ -18,6 +18,7 @@
             ldap = None
 
         ldap_enabled = ldap['enable']
+        config_homedir = middleware.call_sync('sharing.smb.query', [["enabled", "=", True], ["home", "=", True]])
 %>
 % if ldap_enabled:
     uri 	${' '.join(ldap['uri_list'])}
@@ -47,6 +48,9 @@
     timelimit	${ldap['timeout']}
     bind_timelimit ${ldap['dns_timeout']}
     map passwd loginShell /bin/sh
+  % if config_homedir:
+    map homeDirectory "${config_homedir[0]['path']}/$username"
+  % endif
   % if ldap['auxiliary_parameters']:
     ${ldap['auxiliary_parameters']}
   % endif
