Build with truenas-netatalk

--- a/src/middlewared/debian/control
+++ b/src/middlewared/debian/control
@@ -98,7 +98,7 @@ Depends: alembic,
          migrate113,
          migrate93,
          mtree-netbsd,
-         netatalk,
+         truenas-netatalk,
          novnc,
          ntfs-3g,
          ntp,
